--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <canvas class="snake-game" width="600" height="400"></canvas>
+    <div class="game-over" >Game Over</div>
 </body>
+<script src="settings.js"></script>
 </html>
